--- a/style.css
+++ b/style.css
@@ -97,52 +97,11 @@ button {
 }
 
 
-
-
-
-
-
-.control-wrapper {
-  position: relative;
-  width: 60px;
-  height: 60px;
-  margin: 10px;
-}
-
-.knob {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: #444;
-  position: relative;
-  transform: rotate(var(--rotation, 0deg));
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 0.7rem;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-}
-
-.knob.outer {
-  background: #333;
-  z-index: 1;
-}
-
-.knob.inner {
+.mode-label {
   position: absolute;
-  width: 50%;
-  height: 50%;
-  top: 25%;
-  left: 25%;
-  background: #777;
-  z-index: 2;
-}
-
-.knob.select {
-  background: #222;
-  color: #fff;
-  font-size: 0.6rem;
+  top: -1.2em;
+  width: 100%;
   text-align: center;
+  font-size: 0.75em;
+  color: white;
 }
