--- a/style.css
+++ b/style.css
@@ -105,3 +105,14 @@ button {
   font-size: 0.75em;
   color: white;
 }
+
+.value-label {
+  position: absolute;
+  top: -20px;
+  width: 100%;
+  text-align: center;
+  font-size: 0.75em;
+  color: white;
+  pointer-events: none;
+}
+
