--- a/style.css
+++ b/style.css
@@ -38,8 +38,9 @@ button {
 .pedal {
   padding: 15px;
   width: 220px;
-  border-radius: 12px;
-  color: white;
+  border-radius: 10px;
+  border: 15px solid #fff;
+  color: white; /* overridden by JS */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -86,17 +87,6 @@ button {
   transition: transform 0.1s ease;
   cursor: pointer;
 }
-
-/* .knob::after {
-  content: "";
-  position: absolute;
-  top: 6px;
-  left: 50%;
-  width: 4px;
-  height: 14px;
-  background: black;
-  transform: translateX(-50%);
-} */
 
 .knob-indicator {
   position: absolute;
