--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ button {
 
 .control-row {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   gap: 10px;
 }
@@ -124,7 +124,6 @@ button {
   width: 100%;
   text-align: center;
   font-size: 0.75em;
-  color: white;
   pointer-events: none;
 }
 
