--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ button {
   flex-direction: column;
   align-items: center;
   margin: 10px;
-  color: white;
 }
 
 .switch-state-label {
@@ -202,21 +201,26 @@ button {
 .toggle-track {
   position: relative;
   width: 70px;
-  height: 24px;
-  background-color: #444;
-  border-radius: 12px;
+  height: 28px;
+  background-color: #ccc;
+  border-radius: 28px;
   cursor: pointer;
 }
 
 .toggle-thumb {
   position: absolute;
-  top: 2px;
-  width: 20px;
-  height: 20px;
-  background-color: #e74c3c;
+  top: 3px;
+  left: 3px;
+  width: 22px;
+  height: 22px;
+  background-color: #000;
   border-radius: 50%;
-  transition: left 0.2s ease;
+  transition: left 0.3s ease;
+  transform: translateX(-50%);
 }
+
+
+
 
 
 
