--- a/style.css
+++ b/style.css
@@ -117,7 +117,10 @@ body {
   height: 12px;
   border-radius: 50%;
   margin-top: 4px;
+  transition: box-shadow 0.3s ease;
 }
+
+
 
 .row > div > .led,
 .row > div > input[type="checkbox"] {
