--- a/style.css
+++ b/style.css
@@ -99,6 +99,27 @@ body {
   background-color: var(--indicator-color, #fff);
 }
 
+.largeknob {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 4px;
+}
+
+.largeknob::after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 3px;
+  height: 8px;
+  border-radius: 1px;
+  background-color: var(--indicator-color, #fff);
+}
+
 .knob-value-label {
   font-size: 12px;
   font-weight: bold;
