--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ body {
 }
 
 .largeknob {
-  width: 50px;
-  height: 50px;
+  width: 55px;
+  height: 55px;
   border-radius: 50%;
   position: relative;
   cursor: pointer;
@@ -153,7 +153,11 @@ body {
 
 
 
-
+.knob,
+.smallknob,
+.largeknob {
+  box-sizing: border-box;
+}
 
 
 
