--- a/style.css
+++ b/style.css
@@ -168,6 +168,33 @@ body {
 
 
 
+.slider-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 4px;
+}
+
+input[type="range"].vertical {
+  writing-mode: bt-lr; /* Bottom to top, left to right */
+  -webkit-appearance: slider-vertical;
+  width: 8px;
+  height: 70px;
+  background: transparent;
+}
+
+.slider-label {
+  font-size: 10px;
+  text-align: center;
+  margin-top: 4px;
+  color: inherit;
+}
+
+
+
+
+
+
 @font-face {
   font-family: bigmuff;
   src: url("fonts/ITC Pioneer Regular.otf");
