--- a/style.css
+++ b/style.css
@@ -162,7 +162,12 @@ body {
 
 .align-left {
   position: absolute;
-  left: 8px;
+  left: 12px;
+}
+
+.align-right {
+  position: absolute;
+  right: 12px;
 }
 
 
@@ -172,7 +177,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 4px;
+  /*margin: 0 4px;*/
+  margin: 0 -12px;
 }
 
 input[type="range"].vertical {
