--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ body {
 }
 
 .smallknob {
-  width: 24px;
-  height: 24px;
+  width: 26px;
+  height: 26px;
   border-radius: 50%;
   position: relative;
   cursor: pointer;
@@ -120,8 +120,8 @@ body {
 }
 
 .xlargeknob {
-  width: 70px;
-  height: 70px;
+  width: 75px;
+  height: 75px;
   border-radius: 50%;
   position: relative;
   cursor: pointer;
@@ -172,14 +172,22 @@ body {
 }
 
 
-
-
 .knob,
 .smallknob,
 .largeknob,
 .xlargeknob {
   box-sizing: border-box;
 }
+
+
+.knob,
+.smallknob,
+.largeknob,
+.xlargeknob {
+  aspect-ratio: 1 / 1;
+  flex-shrink: 0;
+}
+
 
 
 .align-left {
@@ -199,7 +207,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*margin: 0 4px;*/
   margin: 0 -12px;
 }
 
