--- a/style.css
+++ b/style.css
@@ -246,3 +246,7 @@ input[type="range"].vertical {
   font-family: mxr;
   src: url("fonts/eurostile.TTF");
 }
+@font-face {
+  font-family: tsmini;
+  src: url("fonts/Schluber.otf");
+}
