--- a/style.css
+++ b/style.css
@@ -250,3 +250,7 @@ input[type="range"].vertical {
   font-family: tsmini;
   src: url("fonts/Schluber.otf");
 }
+@font-face {
+  font-family: sp;
+  src: url("fonts/Lobster-Regular.ttf");
+}
