--- a/style.css
+++ b/style.css
@@ -401,6 +401,31 @@ input[type="range"].vertical {
       font-size: 12px;
       cursor: pointer;
     }
+    .edit-btn {
+      position: fixed;
+      top: -5%;
+      right: -5%;
+      background: #0078d7; /* Blue background */
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      width: 24px;
+      height: 24px;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    }
+
+    .edit-btn svg {
+      width: 16px;
+      height: 16px;
+      fill: white;
+      pointer-events: none;
+    }
+
+
     #selected-pedals {
       display: flex;
       flex-wrap: wrap;
@@ -460,6 +485,11 @@ input[type="range"].vertical {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px;
   max-width: 8rem!important;
 }
+
+
+
+
+
 
 
 
