--- a/style.css
+++ b/style.css
@@ -567,4 +567,9 @@ input[type="range"].vertical {
   font-family: bubbly;
   src: url("fonts/Talina.otf");
 }
+@font-face {
+  font-family: ibanez;
+  src: url("fonts/SecretAgentPersonalUse-vPzE.ttf");
+}
+
 
