--- a/style.css
+++ b/style.css
@@ -664,3 +664,69 @@ input[type="range"].horizontal {
   font-family: compacta;
   src: url("fonts/compacta.ttf");
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.diamond-plate {
+  display: block;
+  position: relative;
+  background-color: rgba(150, 150, 150, 1);
+  background-image:
+
+/*Masks*/
+linear-gradient(144deg, rgba(150,150,150,1) 26px, transparent 27px),
+linear-gradient(-34deg, rgba(150,150,150,1) 25px, transparent 26px),
+
+/*Forward slant Angled Diamond Upper Half*/
+linear-gradient(132deg, rgba(255,255,255, 1) 26px, transparent 27px),
+linear-gradient(128deg, rgba(200,200,200, 0.7) 26px, transparent 27px),
+
+/*Forward slant Angled Diamond Lower Half*/
+linear-gradient(-41deg, rgba(200,200,200, 1) 27px, transparent 28px),
+linear-gradient(-52deg, rgba(255,255,255, 1) 27px, transparent 28px),
+
+/*Masks*/
+linear-gradient(-125deg, rgba(150,150,150,1) 26px, transparent 27px),
+linear-gradient(55deg, rgba(150,150,150,1) 25px, transparent 26px),
+
+/*Backward Slant Angled Diamond Lower Half*/
+linear-gradient(-132deg, rgba(200,200,200, 1) 26px, transparent 27px),
+linear-gradient(-141deg, rgba(255,255,255, 1) 26px, transparent 27px),
+
+/*Backward Slant Angled Diamond Upper Half*/
+linear-gradient(42deg, rgba(255,255,255, 1) 27px, transparent 28px),
+linear-gradient(38deg, rgba(200,200,200, 0.5) 27px, transparent 28px)
+
+;
+
+background-size:
+100px 100px;
+ 
+background-position:
+-16px 9px, -13px -11px,
+-13px 13px, -13px 16px,
+-13px -11px, -13px -16px,
+-23px -1px, -3px -1px, 
+-26px -1px, -30px -1px,
+-2px -1px, 1px -1px
+;
+
+background-repeat:repeat;
+height:0;
+width:auto;
+padding-bottom:56.25%;
+	}
