--- a/style.css
+++ b/style.css
@@ -439,8 +439,25 @@ input[type="range"].horizontal {
 
 
 
-
-
+/* BUILDER */
+  #builder { display:flex; gap:20px; flex-wrap:wrap; }
+  #editor { flex: 0 0 55%; min-width:300px; padding:12px; border-radius:8px; }
+  #preview { flex: 0 0 40%; min-width:200px; padding:12px; border-radius:8px; color:white; }
+  #pedal-box { position:relative; }
+  .row-actions { margin-top:6px; display:flex; gap:4px; }
+  .row-buttons, .controls-row { display:flex; flex-direction:row!important; gap:6px; flex-wrap:nowrap; }
+  .row-buttons, .controls-row button { flex:0 0 auto; white-space:nowrap; }
+  .control { background:#222; padding:6px; margin:6px 0; border-radius:6px; z-index:200;}
+  .control label { display:block; font-size:12px; margin:2px 0; }
+  .ctrl-actions { display:flex; gap:4px; flex-direction: column; }
+  .ctrl-label { width:70px; }
+  .ctrl-num, .ctrl-text { width:50px; }
+  button { cursor:pointer; margin-left:0px!important; }
+  input { font-size: 0.875rem; padding: 6px 12px; border: 1px solid rgb(140, 140, 140); border-radius: 4px; outline-offset: 2px; }
+  select { height: 30px; font-size: initial; }
+  input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; padding: 0px; outline-offset: 0px; border-radius: 0px; background-color:transparent; }
+  .pedal-info label { display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 12px;}
+  .pedal-info input { width: 55%; box-sizing: border-box; }
 
 
 
