--- a/style.css
+++ b/style.css
@@ -500,17 +500,29 @@ input[type="range"].horizontal {
       cursor: pointer;
     }
 
-    .pedal-catalog {
+
+
+.pedal-catalog {
   position: relative;
 }
-    .pedal-catalog .edit-btn {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  background: transparent;
-  border: none;
-  cursor: pointer;
+
+.pedal-catalog .edit-btn {
+position: absolute;
+top: -6px;
+right: -5px;
+background: #0f62fe;
+border-radius: 50%;
+border: none;
+cursor: pointer;
+width: 24px;
+height: 24px;
+padding: 0;
+display: flex;
+align-items: center;
+justify-content: center;
 }
+
+
 
     .edit-btn svg {
       width: 16px;
