--- a/style.css
+++ b/style.css
@@ -453,8 +453,9 @@ input[type="range"].horizontal {
   .ctrl-label { width:70px; }
   .ctrl-num, .ctrl-text { width:50px; }
   button { cursor:pointer; margin-left:0px!important; }
-  input { font-size: 0.875rem; /*padding: 6px 12px;*/ border: 1px solid rgb(140, 140, 140); border-radius: 4px; outline-offset: 2px; }
+  input { font-size: 0.875rem; border: 1px solid rgb(140, 140, 140); border-radius: 4px; outline-offset: 2px; }
   /* select { height: 30px; font-size: initial; } */
+  .create-gear-input { padding: 6px 12px; }
   input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; padding: 0px; outline-offset: 0px; border-radius: 0px; background-color:transparent; }
   .pedal-info label { display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 12px;}
   .pedal-info input { width: 55%; box-sizing: border-box; }
