--- a/style.css
+++ b/style.css
@@ -597,10 +597,10 @@ justify-content: center;
 
 .modal-footer {
   display: block;
-  width: 80%;
+  /* width: 80%; */
   margin: auto;
   position: relative;
-  top: 20px;
+  /* top: 20px; */
   padding-bottom: 40px;
 }
 
