--- a/style.css
+++ b/style.css
@@ -507,29 +507,50 @@ input[type="range"].horizontal {
 }
 
 .pedal-catalog .edit-btn {
-position: absolute;
-top: -6px;
-right: -5px;
-background: #0f62fe;
-border-radius: 50%;
-border: none;
-cursor: pointer;
-width: 24px;
-height: 24px;
-padding: 0;
-display: flex;
-align-items: center;
-justify-content: center;
+  position: absolute;
+  top: -6px;
+  right: -5px;
+  background: #0f62fe;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.edit-btn svg {
+  width: 16px;
+  height: 16px;
+  fill: white;
+  pointer-events: none;
+}
 
+.pedal-catalog .duplicate-btn {
+  position: absolute;
+  top: -6px;
+  right: -5px;
+  background: #0f62fe;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    .edit-btn svg {
-      width: 16px;
-      height: 16px;
-      fill: white;
-      pointer-events: none;
-    }
+.duplicate-btn svg {
+  width: 16px;
+  height: 16px;
+  fill: white;
+  pointer-events: none;
+}
 
 
     #selected-pedals {
