test buttons primary styling

--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
 
+
+    .bx--btn--primary {
+      background: linear-gradient(45deg, #4facfe, #00f2fe)!important;
+      transition: background-position 0.5s ease;
+      background-size: 200% 200%;
+      background-position: left center;
+    }
+
     #username, #password, #email, #newPassword, #oldPassword {
       font-size: 0.875rem;
       padding: 6px 12px;
@@ -218,6 +226,7 @@ html {
 #pedalboardSelect, #presetSelect, #folderSelect, #folderSelectInput, #selectFolder {
   height: 40px;
   font-size: initial;
+  max-width: 11rem;
 }
 
 #pedalFilterInput {
