--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@
     }
 
 
-    .bx--btn--primary {
+    /* .bx--btn--primary {
       background: linear-gradient(45deg, #4facfe, #00f2fe)!important;
       transition: background-position 0.5s ease;
       background-size: 200% 200%;
       background-position: left center;
-    }
+    } */
 
     #username, #password, #email, #newPassword, #oldPassword {
       font-size: 0.875rem;
