--- a/style.css
+++ b/style.css
@@ -14,12 +14,16 @@
     }
 
 
-    /* .bx--btn--primary {
-      background: linear-gradient(45deg, #4facfe, #00f2fe)!important;
+    .bx--btn--primary {
+      background: linear-gradient(45deg, #0353e9, #0098fe)!important;
       transition: background-position 0.5s ease;
-      background-size: 200% 200%;
+      background-size: 300% 300%;
       background-position: left center;
-    } */
+    }
+
+    .bx--btn--primary:hover {
+      background-position: right center; /* smoothly shifts gradient */
+    }
 
     #username, #password, #email, #newPassword, #oldPassword {
       font-size: 0.875rem;
