--- a/style.css
+++ b/style.css
@@ -16,13 +16,12 @@
 
     .bx--btn--primary {
       background: linear-gradient(45deg, #0353e9, #0098fe)!important;
-      transition: background-position 0.5s ease !important;
       background-size: 300% 300% !important;
-      background-position: left center !important;
     }
 
     .bx--btn--primary:hover {
-      background-position: right center !important; /* smoothly shifts gradient */
+      background: linear-gradient(45deg, #125ce6, #2fa9fb)!important;
+      background-size: 300% 300% !important;
     }
 
     #username, #password, #email, #newPassword, #oldPassword {
