--- a/style.css
+++ b/style.css
@@ -15,13 +15,11 @@
 
 
     .bx--btn--primary {
-      background: linear-gradient(45deg, #0353e9, #0098fe)!important;
-      background-size: 300% 300% !important;
+      background-color: #9C54D5;
     }
 
     .bx--btn--primary:hover {
-      background: linear-gradient(45deg, #125ce6, #2fa9fb)!important;
-      background-size: 300% 300% !important;
+      background-color: #a367d4;
     }
 
     #username, #password, #email, #newPassword, #oldPassword {
