--- a/style.css
+++ b/style.css
@@ -53,6 +53,21 @@
       background-position: 100% 50%; /* shift gradient */
     }
 
+    .bx--btn--tertiary {
+      cursor: pointer;
+      border-width: 1px;
+      border-style: solid;
+      border-color: #9C54D5;
+      background-color: rgba(0,0,0,0);
+      color: #9C54D5;
+    }
+    .bx--btn--tertiary:hover {
+      background-color: #9C54D5;
+    }
+
+
+
+
     #username, #password, #email, #newPassword, #oldPassword {
       font-size: 0.875rem;
       padding: 6px 12px;
