--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
     .bx--btn--primary {
       cursor: pointer;
       background: linear-gradient(45deg, #462964, #9C54D5, #5EE2F0);
-      background-size: 100% 100%;
       transition: background-position 0.5s ease, transform 0.2s ease, box-shadow 0.2s ease;
       border: none;
       background-size: 150% 150%;
@@ -30,7 +29,6 @@
     .bx--btn--secondary {
       cursor: pointer;
       background: linear-gradient(45deg, #3b3b3b, #727272);
-      background-size: 100% 100%;
       transition: background-position 0.5s ease, transform 0.2s ease, box-shadow 0.2s ease;
       border: none;
       background-size: 150% 150%;
@@ -43,7 +41,6 @@
     .bx--btn--danger {
       cursor: pointer;
       background: linear-gradient(45deg, #5dace4, #5EE2F0);
-      background-size: 100% 100%;
       transition: background-position 0.5s ease, transform 0.2s ease, box-shadow 0.2s ease;
       border: none;
       background-size: 150% 150%;
@@ -62,7 +59,12 @@
       color: #9C54D5;
     }
     .bx--btn--tertiary:hover {
-      background-color: #9C54D5;
+      cursor: pointer;
+      background: linear-gradient(45deg, #462964, #9C54D5, #5EE2F0);
+      transition: background-position 0.5s ease, transform 0.2s ease, box-shadow 0.2s ease;
+      border: none;
+      background-size: 150% 150%;
+      background-position: 100% 50%; /* shift gradient */
     }
 
 
