--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
       cursor: pointer;
       background: linear-gradient(45deg, #462964, #9C54D5, #5EE2F0);
       transition: background-position 0.5s ease, transform 0.2s ease, box-shadow 0.2s ease;
-      border: none;
+      border: rgba(0,0,0,0);
       background-size: 150% 150%;
       background-position: 100% 50%; /* shift gradient */
     }
