all menu icons changed to logo

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@
       background: none;
       border: none;
       cursor: pointer;
-      margin-right: 1rem;
+      /* margin-right: 1rem; */
     }
 
     .menu-icon {
